hydroflow_plus/src/snapshots/hydroflow_plus__profiler__tests__predicate_pushdown_through_map.snap
---
source: hydroflow_plus/src/profiler.rs
expression: "&built.ir"
---
[
    ForEach {
        f: { use crate :: __staged :: profiler :: tests :: * ; | n | println ! ("{}" , n) },
        input: Map {
            f: { use crate :: __staged :: profiler :: tests :: * ; | v | v + 1 },
            input: Persist(
                Source {
                    source: Iter(
                        { use crate :: __staged :: profiler :: tests :: * ; 0 .. 10 },
                    ),
                    location_id: 0,
                },
            ),
        },
    },
]
